--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -18,17 +18,17 @@
 			</a>
 		</div>
 		<ul class="nav-right list-inline headmenu">
-			<li><a ui-sref="app.inventory.devices"><span>Inventory</span></a></li>
-			<li><a ui-sref="app.firmware.firmware-management"><span>Firmware</span></a></li>
-			<li class="dropdown" uib-dropdown>
-				<span class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span>
+			<li ng-class="(active == 'inventory') ? 'active' : ''"><a ui-sref="app.inventory.devices"><span>Inventory</span></a></li>
+			<li ng-class="(active == 'firmware') ? 'active' : ''"><a ui-sref="app.firmware.firmware-management"><span>Firmware</span></a></li>
+			<!-- <li ng-class="(active == 'administrator') ? 'active' : ''" class="dropdown" ng-class="" uib-dropdown>
+				<span ng-class="(active == 'administrator') ? 'active' : ''" class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<!-- <li><a ui-sref="app.administrator.roles">Roles</a></li>
+					<li><a ui-sref="app.administrator.roles">Roles</a></li>
 					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
-					<li><a ui-sref="app.administrator.admin">Admin</a></li> -->
+					<li><a ui-sref="app.administrator.admin">Admin</a></li>
 					<li><a ui-sref="app.administrator.master-admin">Master Admin</a></li>
 				</ul>
-			</li>
+			</li> -->
 			<!-- <li class="dropdown" uib-dropdown>
 				<a href class="dropdown-toggle" uib-dropdown-toggle>
 					<span>Monitoring &nbsp;<fa name="angle-down"></fa></span>
