--- a/elika-warehouse/views/tmpl/app.html
+++ b/elika-warehouse/views/tmpl/app.html
@@ -1,5 +1,5 @@
-<section ng-include="'views/header.html'" id="header" class="{{main.settings.navbarHeaderColor}}"></section>
-
+<!-- <section ng-include="'views/header.html'" id="header" class="{{main.settings.navbarHeaderColor}}"></section> -->
+<elika-header id="header"></elika-header>
 <!--div id="controls">
 	<aside ng-include="'views/nav.html'" id="sidebar" class="{{main.settings.sidebarColor}}" ng-class="{'aside-fixed':main.settings.asideFixed}"></aside>
 </div-->
