--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -14,7 +14,7 @@
 			<form name="form" class="form-validation mt-20" ng-validate ng-submit="submitForgetPassword(user,form)" novalidate>
 				
 				<div class="form-group">
-					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
+					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" minlength="6" maxlength="40" required>
 				</div>
 				<div class="row text-left" >					
 					<div class="col-sm-12 col-md-6">
