--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -71,7 +71,7 @@
 										</div>
 										<div class="col-sm-3 col-md-3">
 											<label for="">Facility</label><br/>
-											<select class="form-control" ng-disabled="facility_disable" ng-model="facility_id" ng-options="x.facility_id as x.facility_name for x in facility" ng-change="getDoorsList()">
+											<select class="form-control" ng-model="facility_id" ng-options="x.facility_id as x.facility_name for x in facility" ng-change="getDoorsList()">
 												<option value="">Select</option>
 											</select>
 										</div>
@@ -139,8 +139,7 @@
 							<div ng-if="mediatype!='mp4' && mediatype!='wav'" class="form-group col-sm-12">
 								<h3 class="mt-0">Screenshot</h3>					
 								<div class="tile-body p-0">
-									<img src="{{trustSrc(mediafile)}}" class="userimg" alt="">
-									
+									<a href="{{trustSrc(mediafile)}}" target="_blank"><img src="{{trustSrc(mediafile)}}" class="userimg" alt=""></a>
 								</div>
 							</div>
 							<div ng-if="mediatype=='mp4'||mediatype=='wav'" class="form-group col-sm-12">
