--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -42,7 +42,7 @@
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Device Name <span class="text-danger">*</span></label>
-														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder=""
+														<input type="text" maxlength="30" front-space  name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder=""
 														 required autocomplete="off" ui-number-mask>
 													</div>
 
@@ -50,12 +50,12 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number <span class="text-danger">*</span></label>
-														<input type="text" maxlength="32" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder=""
+														<input type="text" maxlength="32" no-space name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder=""
 														 required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code <span class="text-danger">*</span></label>
-														<input type="text" name="" maxlength="32" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<input type="text" name="" no-space maxlength="32" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row" style="display:none;">
