--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -40,7 +40,7 @@
 												<div class="row">
 													<div class="form-group col-md-6">
 														<label for="">Group Name</label>
-														<input type="text" name="name" id="" no-space class="form-control" maxlength="30" placeholder="" ng-model="doorGrp.name" required>
+														<input type="text" name="name" front-space id="" no-space class="form-control" maxlength="30" placeholder="" ng-model="doorGrp.name" required>
 													</div>
 													<div class="form-group col-md-6">
 														<label for="">Facility</label><br/>
