--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -40,7 +40,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
 														<label for="">Name <span class="text-danger">*</span></label>
-														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="" maxlength="30" required>
+														<input type="text" name="" id="" class="form-control" front-space ng-model="door.name" placeholder="" maxlength="30" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
 														<label for="">Facility <span class="text-danger">*</span></label><br/>
