--- a/views/tmpl/admin/door/edit-door-groups.html
+++ b/views/tmpl/admin/door/edit-door-groups.html
@@ -79,7 +79,7 @@
 								<div class="row">
 									<div class="form-group col-md-6">
 										<label for="">Name</label>
-										<input type="text" name="" id="" class="form-control mb-10" placeholder="" ng-model="doorGrpData.doorgroup_name" >
+										<input type="text" name="" front-space id="" class="form-control mb-10" placeholder="" ng-model="doorGrpData.doorgroup_name" >
 									</div>
 									<div class="form-group col-md-6">
 										<label for="">Facility</label><br/>			
