--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -59,11 +59,11 @@
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Facility Name <span class="text-danger">*</span></label>
-												<input type="text" maxlength="30" name="facility_name" id="" class="form-control" ng-model="facility.facility_name" required>
+												<input type="text" maxlength="30" front-space name="facility_name" id="" class="form-control" ng-model="facility.facility_name" required>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Facility Location <span class="text-danger">*</span></label>
-												<input type="text" maxlength="30" name="facility_location" id="" class="form-control" ng-model="facility.facility_location" required>
+												<input type="text" maxlength="30" front-space name="facility_location" id="" class="form-control" ng-model="facility.facility_location" required>
 											</div>
 										</div>
 										<div class="row">
@@ -76,7 +76,7 @@
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Zip Code <span class="text-danger">*</span></label>
-												<input type="text" name="zip" maxlength="6" ng-keypress="allowNumberOnly($event);" id="zip" class="form-control" ng-model="facility.facility_zipcode" placeholder="10001" required>
+												<input type="text" name="zip" maxlength="6" no-space ng-keypress="allowNumberOnly($event);" id="zip" class="form-control" ng-model="facility.facility_zipcode" placeholder="10001" required>
 											</div>
 										</div>
 										<div class="row">
