--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -103,15 +103,15 @@
 													<div class="row">
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">First Name <span class="text-danger">*</span></label>
-															<input type="text" maxlength="30" name="first_name" id="first_name" ng-model="userData.first_name" class="form-control" required>
+															<input type="text" front-space maxlength="30" name="first_name" id="first_name" ng-model="userData.first_name" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Last Name <span class="text-danger">*</span></label>
-															<input type="text" maxlength="30" name="last_name" id="last_name" ng-model="userData.last_name" class="form-control" required>
+															<input type="text" front-space maxlength="30" name="last_name" id="last_name" ng-model="userData.last_name" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Email <span class="text-danger">*</span></label>
-															<input type="email" name="email" id="email" ng-model="userData.email" class="form-control" placeholder="" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'"
+															<input type="email" no-space name="email" id="email" ng-model="userData.email" class="form-control" placeholder="" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'"
 															 required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
@@ -140,7 +140,7 @@
 													<div class="row">
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Name as appears on LCD <span class="text-danger">*</span></label>
-															<input type="text" maxlength="30" name="name_on_lcd" id="name_on_lcd" ng-model="userData.name_on_lcd" class="form-control"
+															<input type="text" front-space maxlength="30" name="name_on_lcd" id="name_on_lcd" ng-model="userData.name_on_lcd" class="form-control"
 															 required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
@@ -149,21 +149,21 @@
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Address <span class="text-danger">*</span></label>
-															<input type="text" name="address" id="address" ng-model="userData.address" class="form-control" placeholder="" required>
+															<input type="text" front-space name="address" id="address" ng-model="userData.address" class="form-control" placeholder="" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Zip Code <span class="text-danger">*</span></label>
-															<input type="text" maxlength="6" name="zip_code" ng-keypress="allowNumberOnly($event);" id="zip_code" ng-model="userData.zip_code" class="form-control" required>
+															<input type="text" no-space number minlength="4" maxlength="6" name="zip_code" ng-keypress="allowNumberOnly($event);" id="zip_code" ng-model="userData.zip_code" class="form-control" required>
 														</div>
 													</div>
 													<div class="row" ng-controller="ActivebtnCtrl">
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Password <span class="text-danger">*</span></label>
-															<input type="password" name="password" id="password" ng-model="userData.password" class="form-control" required>
+															<input type="password" no-space name="password" id="password" ng-model="userData.password" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Confirm Password <span class="text-danger">*</span></label>
-															<input type="password" name="cpassword" id="" ng-model="userData.cpassword" class="form-control" required>
+															<input type="password" no-space name="cpassword" id="" ng-model="userData.cpassword" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Status <span class="text-danger">*</span></label><br/>
