--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -47,7 +47,7 @@
 																		<div class="row">
 																			<div class="form-group col-sm-12 col-md-12">
 																				<label for="">Group Name <span class="text-danger">*</span></label>
-																				<input type="text" maxlength="20" name="group_name" id="group_name" ng-model="userGroup.usergroup_name" class="form-control"
+																				<input type="text" front-space minlength="4" maxlength="30" name="group_name" id="group_name" ng-model="userGroup.usergroup_name" class="form-control"
 																				 placeholder="" required>
 																			</div>
 																			<div class="form-group col-sm-12 col-md-12">
