--- a/views/tmpl/create-new-password.html
+++ b/views/tmpl/create-new-password.html
@@ -13,11 +13,11 @@
 			<form name="form" class="form-validation mt-20" novalidate ng-submit="submitNewPassword(user)">
 			
 				<div class="form-group">
-					<input type="password" minlength="8" maxlength="16" class="form-control underline-input" placeholder="New password" ng-model="user.password" required>
+					<input type="password" no-space minlength="8" maxlength="16" class="form-control underline-input" placeholder="New password" ng-model="user.password" required>
 				</div>
 				
 				<div class="form-group">
-					<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
+					<input type="password" no-space placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
 				</div>
 				
 				<div class="form-group text-left mt-20">  
