--- a/views/tmpl/admin/contact.html
+++ b/views/tmpl/admin/contact.html
@@ -75,10 +75,10 @@
 									</div>
 								</div>
 								<div class="contactnow overflow">									
-									<div class="col-md-8 col-lg-9 pl-0 pr-30">
+									<div class="col-md-12 col-lg-12 pl-0 pr-0">
 										<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.940682981989!2d-117.73522388430187!3d33.63277998072208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dce87698e20b67%3A0x1b391d62f2aa1a3f!2s601+Wald%2C+Irvine%2C+CA+92618%2C+USA!5e0!3m2!1sen!2sin!4v1498649052722"  frameborder="0" allowfullscreen></iframe>
 									</div>
-									<div class="col-md-4 col-lg-3 contactus">
+									<!--div class="col-md-4 col-lg-3 contactus">
 										<h2>Request a Quote</h2>
 										<form ng-validate="" id="" name="" enctype="">
 											<div class="modal-body p-0">
@@ -105,7 +105,7 @@
 												</div>
 											</div>
 										</form>
-									</div>									
+									</div-->									
 								</div>
 							</div>
 						</div>
@@ -115,7 +115,7 @@
 		</div>
 	</div>
 	
-	<div class="cahtdiv ng-scope">
+	<!--div class="cahtdiv ng-scope">
 		<div class="chat-title">Ask an Expert  
 			<span class="close"><i class="fa fa-window-minimize" aria-hidden="true"></i></span>
 			<span class="open"><i class="fa fa-window-maximize" aria-hidden="true"></i></span>
@@ -273,9 +273,9 @@
 				<button type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
 			</form>
 		</div>
-	</div>
+	</div-->
 </div>
-<script>
+<!--script>
 	$(document).ready(function(){
 		$('.chat-title .open').click(function(){
 			$(this).css('display','none');
@@ -288,4 +288,4 @@
 			$('.cahtdiv').css('bottom','0');
 		});
 	});
-</script>
+</script-->
