--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -74,7 +74,7 @@
 												<div class="row">
 													<div class="col-sm-6 col-md-6 form-group" ng-click="custom_schedular()">
 														<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=true">
-															<input name="customRadioAlt" ng-model="schedule.schedule_type" value="ONETIME" type="radio" ng-init="schedule.schedule_type='ONETIME'" ><i></i> One Time
+															<input name="customRadioAlt" ng-model="schedule.schedule_type" value="ONETIME" type="radio" ><i></i> One Time
 														</label>
 													</div>
 													<div class="col-sm-6 col-md-6 form-group" ng-click="repetive_schedular()">
@@ -84,7 +84,7 @@
 													</div>
 												</div>
 											</div>
-											<div class="row check_view disable_modal" ng-init="visibiltyUserGroup=true" ng-hide="visibiltyUserGroup">
+											<div class="row check_view disable_modal" ng-hide="schedule.schedule_type == 'ONETIME'">
 												<div class="col-sm-6 col-md-6 pr-0 form-group">
 													<label for="">Start Date</label>
 													<div class="input-group" ng-controller="DatepickerDemoCtrl">
@@ -96,17 +96,17 @@
 													</div>
 												</div>
 												<div class="col-sm-1 col-md-1 form-group">&nbsp;</div>
-												<div class="form-group col-sm-6 col-md-5" ng-init="schedule.no_expirations=1">
+												<div class="form-group col-sm-6 col-md-5" >
 													<label for="">&nbsp;</label><br/>
 													<label class="checkbox checkbox-custom-alt" style="margin-bottom:8px;" ng-init="">
-														<input name="customRadioAlt" type="checkbox" checked="checked" ng-model="schedule.no_expirations" ng-true-value="1" ng-false-value="0"><i></i> No Expirations
+														<input name="customRadioAlt" type="checkbox" ng-model="schedule.no_expirations" ng-true-value="1" ng-false-value="0"><i></i> No Expirations
 													</label>
 												</div>
 												<div class="form-group col-sm-6 col-md-6" ng-hide="schedule.no_expirations">
 													<label for="">Expiration Date</label>
 													<div class="input-group" ng-controller="DatepickerDemoCtrl">
 														<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="schedule.expiration" is-open="opened"
-														 min-date="schedule.schedule_start_date" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"
+														 min-date="schedule.date" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"
 														/>
 														<span class="input-group-btn">
 															<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
