--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -94,11 +94,11 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">SIP Username <span class="text-danger">*</span></label>
-														<input type="text" maxlength="32" name="sip_username" id="" ng-model="device.sip_username" class="form-control" placeholder="" required>
+														<input type="text" front-space maxlength="32" name="sip_username" id="" ng-model="device.sip_username" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">SIP Password <span class="text-danger">*</span></label>
-														<input type="password" name="sip_password" maxlength="32" id="" ng-model="device.sip_password" class="form-control" placeholder="" required>
+														<input type="password" front-space name="sip_password" maxlength="32" id="" ng-model="device.sip_password" class="form-control" placeholder="" required>
 													</div>
 												</div>
 
