--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -69,7 +69,7 @@
 										<div class="row">
 											<div class="form-group col-sm-12 col-md-12">
 												<label for="">Device Name <span class="text-danger">*</span></label>
-												<input type="text" name="device_name" id="" ng-model="editDevice.device_name" class="form-control" placeholder="" required>
+												<input type="text" front-space maxlength="30" name="device_name" id="" ng-model="editDevice.device_name" class="form-control" placeholder="" required>
 											</div>
 											<!---<div class="form-group col-sm-6 col-md-6">
 												<label for="">Model Name</label>
