--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -111,7 +111,7 @@
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Email <span class="text-danger">*</span></label>
-															<input type="email" no-space name="email" id="email" ng-model="userData.email" class="form-control" placeholder="" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'"
+															<input type="email" no-space name="email" maxlength="40" id="email" ng-model="userData.email" class="form-control" placeholder="" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'"
 															 required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
@@ -159,11 +159,11 @@
 													<div class="row" ng-controller="ActivebtnCtrl">
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Password <span class="text-danger">*</span></label>
-															<input type="password" no-space name="password" id="password" ng-model="userData.password" class="form-control" required>
+															<input type="password" no-space name="password" minlength="8" maxlength="16" id="password" ng-model="userData.password" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Confirm Password <span class="text-danger">*</span></label>
-															<input type="password" no-space name="cpassword" id="" ng-model="userData.cpassword" class="form-control" required>
+															<input type="password" no-space name="cpassword" minlength="8" maxlength="16" id="" ng-model="userData.cpassword" class="form-control" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Status <span class="text-danger">*</span></label><br/>
