--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -150,19 +150,19 @@
 													<div class="row">
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">First Name <span class="text-danger">*</span></label>
-															<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="editUser.user_first_name"
+															<input type="text" maxlength="30" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="editUser.user_first_name"
 															 name="first-name" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Last Name <span class="text-danger">*</span></label>
-															<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="editUser.user_last_name" name="last-name"
+															<input type="text" maxlength="30" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="editUser.user_last_name" name="last-name"
 															 required>
 														</div>
 													</div>
 													<div class="row">
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Email <span class="text-danger">*</span></label>
-															<input type="email" class="form-control" id="email" ng-model="editUser.email" ng-value="editUser.user_email" readonly>
+															<input type="email" maxlength="40" no-space class="form-control" id="email" ng-model="editUser.email" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'" ng-value="editUser.user_email" readonly>
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Profile Photo</label>
@@ -190,7 +190,7 @@
 													<div class="row">
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Name as appears on LCD <span class="text-danger">*</span></label>
-															<input type="text" class="form-control" id="user_name_on_lcd" ng-model="editUser.user_name_on_lcd" name="user_name_on_lcd"
+															<input type="text" maxlength="30" class="form-control" id="user_name_on_lcd" ng-model="editUser.user_name_on_lcd" name="user_name_on_lcd"
 															 required ng-value="editUser.user_name_on_lcd">
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
@@ -205,7 +205,7 @@
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Zip Code <span class="text-danger">*</span></label>
-															<input type="text" class="form-control" id="address1" name="address1" ng-model="editUser.zipcode" ng-value="editUser.user_zipcode"
+															<input type="text" class="form-control" minlength="4" maxlength="6" no-space number id="address1" name="address1" ng-model="editUser.zipcode" ng-value="editUser.user_zipcode"
 															 required>
 														</div>
 													</div>
