--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -212,7 +212,7 @@
 																						<div class="form-group col-sm-12 col-md-12">
 																							<label for="">Group Name</label>
 																							<input type="text" name="usergroup_name" id="usergroup_name" class="form-control" ng-model="usergroupedit.usergroup_name"
-																							 value="usergroupedit.usergroup_name" placeholder="">
+																							 value="usergroupedit.usergroup_name" maxlength="30" placeholder="">
 																						</div>
 																						<div class="form-group col-sm-12 col-md-12">
 																							<label for="">Facility{{usergroupedit.facilities}}</label><br/>
