--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -29,7 +29,27 @@
 			</div>
 		</div>
 		<div ng-controller="ModalDemo2Ctrl" >
-		<script type="text/ng-template" id="myModalContent2.html">
+		<script type="text/ng-template" id="myModalContentView.html">
+			<div class="modal-header"><h4 class="modal-title custom-font">View Schedule</h4></div>
+			<div class="modal-body p-30" >
+				<p class="ng-scope"><label class="ng-binding"><strong>Schedule Type: </strong></label>
+					<span>{{scheduleview.schedule_category}}</span>
+				</p>
+				<p ng-if="scheduleview.schedule_category == 'repeat'">
+					<label><strong>Start Date: </strong></label><span> 
+					{{scheduleview.schedule_start_time*1000 | date:'dd/MM/yyyy': 'UTC'}}</span>
+				</p>
+				<p ng-if="scheduleview.schedule_category == 'repeat'">
+					<label><strong>Expiration Date: </strong></label><span ng-if="scheduleview.schedule_expiration_date != null"> {{scheduleview.schedule_expiration_date*1000 | date:'dd/MM/yyyy': 'UTC'}}</span><span ng-if="scheduleview.schedule_expiration_date == null"> No Expiration</span>
+				</p>
+				<label class="ng-binding"><strong>Schedule: </strong></label>
+				<p ng-repeat="schedule_inp in scheduleview.schedule_input" class="ng-scope">{{schedule_inp.day}} <span> {{schedule_inp.starttime + ' - '+ schedule_inp.endtime + ' ' + schedule_inp.date}}</span><span ng-if="scheduleview.schedule_input.length == 0"> No Schedule</span></p>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
+			</div>
+		</script>
+		<!-- <script type="text/ng-template" id="myModalContent2.html">
 			<form name="form1" role="form"  >
 				<div class="modal-header"><h4 class="modal-title custom-font">Add Schedule</h4></div>
 				<div class="modal-body p-30" >
@@ -96,7 +116,7 @@
 					<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
 				</div>
 			</form>		
-		</script>
+		</script> -->
 		</div>
 		
 		<div class="row">
@@ -176,7 +196,7 @@
 																		<td>{{accesscode.Access_Code}}</td>
 																		<td>{{accesscode.Door_Name}}</td>
 																		<td class="credintialicon ta-c">
-																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'view')" ng-if="accesscode.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a> 
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="viewschedule(accesscode.credential_schedule_id)" ng-if="accesscode.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a> 
 																		</td>
 																		<td class="ta-c">{{accesscode.status==0?'Inactive':'Active'}}</td>
 																	</tr>
@@ -208,7 +228,7 @@
 																			<div ng-repeat="phone in phone_code.Detail.phone_numbers">{{phone.phone_number|tel}}</div>
 																		</td>
 																		<td class="credintialicon ta-c">
-																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(phone.credential_schedule_id, 'view')" ng-if="phone.credential_schedule_id" ><i class="fa fa-eye" aria-hidden="true"></i></a>
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="viewschedule(phone.credential_schedule_id)" ng-if="phone.credential_schedule_id" ><i class="fa fa-eye" aria-hidden="true"></i></a>
 																		</td>
 																		<td class="ta-c">{{phone_code.status==0?'Inactive':'Active'}}</td>
 																	</tr>
@@ -267,7 +287,7 @@
 																		<td>{{wiegand_code.Door_Name}}</td>
 																		<td>{{wiegand_code.Detail.wiegand_facility_code}}</td>
 																		<td class="credintialicon ta-c">
-																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(wiegand_code.credential_schedule_id, 'view')" ng-if="wiegand_code.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a>
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="viewschedule(wiegand_code.credential_schedule_id)" ng-if="wiegand_code.credential_schedule_id"><i class="fa fa-eye" aria-hidden="true"></i></a>
 																		</td>
 																		<td class="ta-c">{{wiegand_code.status==0?'Inactive':'Active'}}</td>
 																	</tr>
@@ -327,7 +347,7 @@
 																		<td>{{blecode.Detail.ble_password}}</td>
 																		<td>{{blecode.Door_Name}}</td>
 																		<td class="credintialicon ta-c">
-																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="scheduleviewopen(blecode.credential_schedule_id, 'view')" ><i class="fa fa-eye" aria-hidden="true" ng-if="blecode.credential_schedule_id"></i></a>
+																			<a href="" uib-tooltip="View" ng-controller="ModalDemo2Ctrl" ng-click="viewschedule(blecode.credential_schedule_id)" ><i class="fa fa-eye" aria-hidden="true" ng-if="blecode.credential_schedule_id"></i></a>
 																		</td>
 																		<td class="ta-c">{{blecode.status==0?'Inactive':'Active'}}</td>
 																	</tr>
