header profile pic

--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -93,7 +93,7 @@
 															</label>
 														</span>
 													</div>
-													
+													<small>Only jpeg,jpg,png accepted | max-size 5mb</small>
 												</div>
 											</div>
 										</div>
