--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -62,7 +62,7 @@
 																	</label>
 																</span>
 															</div>
-															
+															<small>Only jpeg,jpg,png accepted | max-size 5mb</small>
 														</div>
 													</div>
 												</div>
@@ -208,7 +208,7 @@
 <script>
 	function HandleInputTypeFilechange() {
             var fileinput = document.getElementById("profilePicAddUpdate");
-            var textinput = document.getElementById("profilePicFileName");
+			var textinput = document.getElementById("profilePicFileName");
             textinput.value = fileinput.value;
             
         };
