--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -45,7 +45,7 @@
 													<div class="form-group col-md-6">
 														<label for="">Facility</label><br/>
 														<select name="facility" id="mySelect" class="form-control" ng-options="item.facility_id as item.facility_name for item in facilityList"
-														 ng-model="doorGrp.facility_id" required><option value="">Select</option></select>
+														 ng-model="doorGrp.facility_id" ng-change="getDoorsList()" required><option value="">Select</option></select>
 													</div>
 												</div>
 												<div class="form-group">
