--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -44,7 +44,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
 														<label for="">Facility <span class="text-danger">*</span></label><br/>
-														<select class="form-control" ng-disabled="facility_disable" ng-model="door.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList"
+														<select class="form-control" ng-model="door.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList"
 														 required>
 															<option value="">Select</option>
 														</select>
