--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -136,8 +136,16 @@
 													<div class="row">
 														<div class="col-sm-12 col-md-12">
 															<ul class="hslist">
+																<!-- <li ng-repeat="e in exceptions">
+																	<span ng-if="e.frequency=='One-time'">{{e.type}} {{e.date*1000| date:'dd-MMM-yyyy': 'UTC'}} from {{e.start_time}} to {{e.end_time}}</span> 
+																	<span ng-if="e.frequency=='Repeat'">(Repeating) {{e.type}} {{e.week}} {{e.day}} from {{e.start_time}} to {{e.end_time}}</span>  
+																	<a ng-click="removeHolidaySchdule(e.key)" class="pull-right text-lightred">
+																		<i class="fa fa-trash-o" aria-hidden="true"></i>
+																	</a>
+																</li> -->
 																<li ng-repeat="e in exceptions">
-																	<span>({{e.frequency}}){{e.type}} {{e.week}} {{e.day}} {{e.frequency == "Repeat" ? "" : e.date*1000| date:'dd-MMM-yyyy': 'UTC'}} from {{e.start_time}} to {{e.end_time}}</span> 
+																	<span ng-if="e.frequency=='One-time' || e.type=='ONETIME'">{{e.status}} {{e.date}} from {{e.start_time}} to {{e.end_time}}</span> 
+																	<span ng-if="e.frequency=='Repeat' || e.type=='REPEATING'">(Repeating) {{e.status}} {{e.week}} {{e.day}} from {{e.start_time}} to {{e.end_time}}</span> 
 																	<a ng-click="removeHolidaySchdule(e.key)" class="pull-right text-lightred">
 																		<i class="fa fa-trash-o" aria-hidden="true"></i>
 																	</a>
