--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -1,6 +1,6 @@
 <div class="page page-profile">
 	<div class="pageheader backpage">		
-		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
+		<a ui-sref="app.admin.dashboard"><i class="fa fa-arrow-left"></i> Back</a>
 		<div class="facility-view elika-facility-name"></div>
 	</div>
 	
