--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -1,6 +1,6 @@
 <div class="page admin">
 	<div class="pageheader backpage">
-		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
+		<a ui-sref="app.admin.dashboard"><i class="fa fa-arrow-left"></i> Back</a>
 		<!-- <div class="facility-view elika-facility-name"></div> -->
 		<div class="facility-view elika-facility-name"></div>
 		
