--- a/styles/custom.css
+++ b/styles/custom.css
@@ -14,6 +14,7 @@ a {
 
 .schedule_scroll {
     overflow-x: auto;
+	border-bottom: 1px solid #cecece;
 }
 
 #scheduler_here {
@@ -944,6 +945,10 @@ a.serplan:hover {
 
 .myshortcuts .slimScrollDiv .slimScrollBar {
     background: rgb(255, 255, 255) !important;
+}
+
+.doorgroupslist .slimScrollDiv .slimScrollBar {
+    background: rgba(0, 0, 0,0.5) !important;
 }
 
 .card-container .card .bg-dashboard.dashboardbg .bg-transparent {
@@ -2205,7 +2210,7 @@ input.input-sm.input-unstyled::-webkit-input-placeholder {
 
 span.error {
     font-size: 14px;
-    color: #ff0000;
+    color: #d9534f;
     line-height: 22px;
 }
 
@@ -2385,18 +2390,18 @@ span.error {
 span.error {
     font-size: 12px;
     font-weight: 400;
-    color: #ff0000;
+    color: #d9534f;
 }
 
 label.error {
     font-size: 12px;
     font-weight: 400;
-    color: #ff0000;
+    color: #d9534f;
 }
 
 input.ng-invalid-required.error,
 select.ng-invalid-required.error {
-    border: 1px solid #ff0000;
+    border: 1px solid #d9534f;
 }
 
 .addaccess .aassigndoor {
@@ -3079,7 +3084,7 @@ span.edittxt {
 .div-width input.error,
 .div-width select.error {
 	border: 0!important;
-	border-bottom: 1px solid #ff0000!important;
+	border-bottom: 1px solid #d9534f!important;
 }
 .div-width input.error + label,
 .div-width select.error + label {
@@ -3134,8 +3139,8 @@ span.edittxt {
 .submit_wizard {
 	position: relative;
 	background: #ffffff;
-	width: 75%;
-    margin: 2.5% auto;
+	width: 1140px;
+    margin: 0 auto;
 }
 
 .submit_wizard h2.ng-binding {
@@ -3148,10 +3153,12 @@ span.edittxt {
 
 .submit_wizard .steps-indicator {
 	top: 46px;
-	position: absolute;
-	bottom: auto!important;
-	height: 68px!important;
-	border-bottom: 1px dashed #e4e4e4;
+    position: absolute;
+    bottom: auto!important;
+    height: 68px!important;
+    left: auto!important;
+    width: 60%;
+	display: none;
 }
 
 .submit_wizard .steps-indicator li {
@@ -3172,16 +3179,21 @@ span.edittxt {
     padding: 5%;
     top: 0;
     left: 0;
+	overflow-y: auto;
 }
 
 .pop-out {
 	position: absolute;
-    top: 20px;
-    right: 45px;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 400;
+    top: 5px;
+    right: 17px;
+    color: #333333;
+    font-size: 24px;
+    font-weight: 100;
     cursor: pointer;
+}
+
+.pop-out:hover {
+	color: #d9534f;
 }
 
 .btn-numbers .btn {
@@ -3193,7 +3205,7 @@ span.edittxt {
     font-weight: 400;
     text-align: center;
     margin-bottom: 50px;
-    color: #ff0000;
+    color: #d9534f;
 	line-height: 26px;
 }
 
@@ -3213,6 +3225,149 @@ span.doorname {
 span.schedulename {
 	width: 65%;
     display: inline-block;
+}
+
+.wizpopup-form {
+	overflow: hidden;
+	background: #0eba8c;
+}
+
+.wizpopup-form .form-control {
+	height: 44px;
+    padding: 8px 12px;
+	font-size: 16px;
+}
+
+.wizpopup-form label {
+	font-size: 18px;
+	margin-top: 15px;
+}
+
+.wizpopup-form .btn-grey {
+	width: 120px;
+    font-size: 18px;
+    margin: 30px 10px 0 !important;
+}
+
+.wizpopup-form span.error {
+	position: absolute;
+}
+
+.text-danger.mandate {
+	position: absolute;
+    top: 48px;
+    right: 30px;
+    height: 44px;
+    line-height: 44px;
+}
+
+.wizpopup-form .adddoor {
+	position: absolute;
+    top: 49px;
+    height: 42px;
+    right: 1px;
+    padding: 6px 20px;
+    font-size: 16px; 
+}
+
+.wizpopup-form .form-control:focus ~ .adddoor,
+.wizpopup-form .form-control:focus:hover ~ .adddoor {
+	background-color: #3c8719;
+	color: #fff;
+}
+
+.fixheadtable {
+	position: absolute;
+    width: 100%;
+    background: #fff;
+	z-index: 99;
+}
+
+.df-left {
+	float: left;
+    width: 40%;
+    background: #0eba8c;
+	color: #fff;
+	text-align: center;
+	padding: 20px 20px 0;
+}
+
+.df-left h2 {
+	font-size: 50px;
+    font-weight: 300;
+    font-style: italic;
+    margin: 75px 0 40px;
+}
+
+.df-left h4 {
+	font-size: 24px;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.df-left p {
+	font-size: 20px;
+    font-weight: 100;
+    font-style: italic;
+    padding: 15px 75px;
+	margin-bottom: 80px;
+}
+
+.df-left img {
+	width: 415px;
+    /*position: absolute;
+    left: 4px;
+    bottom: 0;*/
+}
+
+.df-right {
+	float: left;
+    width: 60%;
+    background: #fff;
+	padding: 35px;
+}
+
+.df-right h2 {
+	color: #0eba8c;
+    font-size: 32px;
+    font-weight: 100;
+    margin: 0 0 25px;
+    text-align: center;
+}
+
+.df-right h3 {
+	font-size: 18px;
+    font-weight: 300;
+    font-style: italic;
+    margin-top: 0;
+    width: 100%;
+    text-align: center;
+    color: #252525;
+    margin-bottom: 20px;
+	line-height: 20px;
+}
+
+.table-responsive > .table-bordered.doorslists {
+	word-break: break-all;
+}
+
+.doorgroupslist ul {
+	list-style: none;
+    padding: 0;
+}
+
+.doorgroupslist ul li {
+	float: left;
+	width: 100%;
+}
+
+.doorgroupslist ul.doorslist li {
+	width: 50%;
+}
+
+.doorgroupslist .doorsscrollbars {
+	max-height: 350px;
+    min-height: 350px;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -3602,6 +3757,13 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_location {
 		width: 515px;
 	}
+	.wizpopup-form .adddoor,
+	.text-danger.mandate	{
+		top: 53px;
+	}
+	.wizpopup-form .input-group-btn .btn {
+		    padding: 10px 15px 11px !important;
+	}
 }
 
 @media screen and (max-width:1679px) and (min-width:1400px) {
@@ -3945,6 +4107,16 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_location {
 		width: 310px;
 	}
+	.submit_wizard,
+	.df-left img	{
+		width: 100%;
+	}
+	.df-left h2 {
+		font-size: 38px;
+	}
+	.df-left h4 {
+		font-size: 22px;
+	}
 }
 
 @media only screen and (max-width: 1139px) {
@@ -4044,6 +4216,20 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_location {
 		font-size: 22px;
 		height: 34px;
+	}
+	.df-left h2 {
+		font-size: 32px;
+	}
+	.df-left h4 {
+		font-size: 20px;
+	}
+	.df-left p {
+		font-size: 18px;
+		padding: 15px 25px;
+		margin-bottom: 150px;
+	}
+	.table-responsive > .table-bordered.doorslists {
+		width: 100%;
 	}
 }
 
@@ -4233,6 +4419,12 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_name,
 	.covertext .facility_name_location span.facility_location {
 		width: 250px;
+	}
+	.df-left {
+		display: none;
+	}
+	.df-right {
+		width: 100%;
 	}
 }
 
@@ -4520,6 +4712,35 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_location {
 		width: 350px;
 	}
+	.df-right {
+		padding: 35px 20px 20px;
+	}
+	.df-right h2 {
+		font-size: 26px;
+	}	
+	.df-right h3 {
+		font-size: 16px;
+		font-weight: 400;
+	}
+	.text-danger.mandate {
+		top: 5px;
+		right: 15px;
+		font-size: 12px;
+	}
+	.wizpopup-form label {
+		font-size: 16px;
+	}
+	.wizpopup-form .adddoor {
+		top: 46px;
+	}
+	.fixheadtable .table-responsive {
+		margin-bottom:0;
+	}
+	.wizpopup-form .btn-grey {
+		width: 100px;
+		font-size: 16px;
+		margin: 25px 5px 0 !important;
+	}
 }
 
 @media only screen and (max-width: 399px) {
@@ -4551,5 +4772,14 @@ span.schedulename {
 	.covertext .facility_name_location span.facility_name,
 	.covertext .facility_name_location span.facility_location {
 		width: 280px;
+	}
+	.text-danger.mandate {
+		display: none;
+	}
+	.df-right h2 {
+		font-size: 22px;
+	}
+	.df-right h3 {
+		font-size: 14px;
 	}
 }
