--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -1,6 +1,7 @@
 <div class="page subadmin">
 	<div class="pageheader backpage">
-		<a ui-sref="app.admin.dashboard"><i class="fa fa-arrow-left"></i> Back</a>
+		<!-- <a ui-sref="app.admin.dashboard"><i class="fa fa-arrow-left"></i> Back</a> -->
+		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 		<div class="facility-view elika-facility-name"></div>
 	</div>
 
