--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -195,12 +195,12 @@
 													<div class="list-view">
 														<p><span>Model No</span><span class="devicelengths">: {{ device.device_model}}</span></p>
 														<p><span>Client</span><span class="devicelengths">: {{ device.facility_name | warehouseClientNameInList}}</span></p>
-														<p><span>Serial No.</span> : {{ device.device_serial_no }}</p>
+														<p><span>Serial No.</span><span class="devicelengths">: {{ device.device_serial_no }}</span></p>
 													</div>
 													<div class="list-view grid-hide">
 														<p><span>Reg Code</span><span class="devicelengths">: {{ device.device_registration_code }}</span></p>
-														<p><span>Mac Id</span> : {{ device.device_mac_address }}</p>
-														<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p>
+														<p><span>Mac Id</span><span class="devicelengths">: {{ device.device_mac_address }}</span></p>
+														<p><span>Create Date</span><span class="devicelengths">: {{ device.device_created_on | date :  "dd.MM.y"  }}</span></p>
 													</div>
 												</div>
 											</md-card-content>
