--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -141,7 +141,7 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r mb-10 pb-20">								
+							<div class="row pos-r mb-10 pb-20 formobile">								
 								<div class="col-sm-9 col-md-6">
 									<div class="row">
 										<div class="col-sm-7 col-md-9 search">
