--- a/styles/custom.css
+++ b/styles/custom.css
@@ -691,7 +691,14 @@ table.dstatus tr td.online {
 }
 
 .fa-calendar-check-o.online {
-    color: #3c8719
+    color: #3c8719;
+	margin-top: 3px;
+	cursor: pointer;
+}
+
+.fa-calendar-check-o.online ~ .fade {
+	margin-top: -20px !important;
+	margin-left: 20px!important;
 }
 
 table.dstatus tr td.offline {
