--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -209,7 +209,7 @@
 									           <div class="list-view">
 									            <h2 class="md-title">{{ device.device_name }} </h2>
 									            <p> {{ device.device_facility_name | uppercase }}</p>
-									            <p> {{ device.device_slave_count }} Dependent Device </p>
+									            <!-- <p> {{ device.device_slave_count }} Dependent Device </p> -->
 									            
 									           </div>
 									           <div class="list-view grid-hide">
@@ -222,7 +222,7 @@
 									           <div class="list-view grid-hide created_by">
 									            <h2 class="md-title"> Created By</h2>
 									            <p> {{ device.device_created_by_name }} </p>
-									            <!-- <p> Door Name </p> -->
+									            <!-- <p> Firmware Version :  </p> -->
 									            
 									            
 									           </div>
